*datalog-2.6 (14 Nov 2016)

  14 Nov 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +datalog-2.6.ebuild, +metadata.xml:
  dev-lang/datalog: new ebuild