@@ -14,7 +14,7 @@ SRC_URI="https://sourceforge.net/projects/datalog/files/${PN}/${PV}/${P}.tar.gz"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
+IUSE="static"
 
 DEPEND="dev-lang/lua:0
 	sys-libs/readline:0"
@@ -22,11 +22,13 @@ RDEPEND="${DEPEND}"
 
 src_configure() {
 	econf \
-		--with-lua
+		--with-lua \
+		--enable-shared \
+		$(use_enable static)
 }
 
 src_install() {
 	default
 
-	rm -r "${D}/usr/$(get_libdir)" || die
+	prune_libtool_files --all
 }
