@@ -1,3 +1,7 @@
+  24 Nov 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  datalog-2.6.ebuild:
+  dev-lang/datalog: build shared library & static USE flag
+
 *datalog-2.6 (14 Nov 2016)
 
   14 Nov 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
